--- a/CCIP/CCIP/StaffGroupView.xib
+++ b/CCIP/CCIP/StaffGroupView.xib
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StaffGroupViewController">
-            <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="StaffGroupView">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -20,8 +15,8 @@
                     <rect key="frame" x="0.0" y="8" width="600" height="584"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="hBy-8d-lZV"/>
-                        <outlet property="delegate" destination="-1" id="EsR-xn-3je"/>
+                        <outlet property="dataSource" destination="-1" id="oY2-V4-Vns"/>
+                        <outlet property="delegate" destination="-1" id="mD4-uI-L4b"/>
                     </connections>
                 </tableView>
             </subviews>
@@ -32,9 +27,6 @@
                 <constraint firstItem="PFC-Wc-Ls4" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottomMargin" id="qvC-CL-98s"/>
                 <constraint firstItem="PFC-Wc-Ls4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" id="uz6-un-lWV"/>
             </constraints>
-            <connections>
-                <outlet property="staffGroupTableView" destination="PFC-Wc-Ls4" id="Fyy-Bx-zbe"/>
-            </connections>
         </view>
     </objects>
 </document>
